--- a/WebPiagetNovo/appsettings.json
+++ b/WebPiagetNovo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebPiagetNovoContext": "Server=(localdb)\\mssqllocaldb;Database=WebPiagetNovoContext-67442c71-6506-4fad-921c-f91c8a774583;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
