--- a/WebPiagetNovo/appsettings.json
+++ b/WebPiagetNovo/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebPiagetNovoContext": "Server=(localdb)\\mssqllocaldb;Database=WebPiagetNovoContext-67442c71-6506-4fad-921c-f91c8a774583;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebPiagetNovoContext": "Server=UPGT-SPBR-PC160;TrustServerCertificate=True;Database=WebPiaget;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
